# Barbados

./: ARTICLE.md  codes.md  db.sqlite3  docker-compose.yml  dockerfile  imports.py  manage.py  pyproject.toml  readme.md  requirements.txt  requirements_dev.txt  vercel.json
account/: admin.py  decorators.py  forms.py  urls.py  views.py
barbados/: asgi.py  settings.py  urls.py  wsgi.py
base/: models.py  urls.py  views.py
base/migrations/: 0001_initial.py  0002_alter_name_id_number.py
drivers/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
drivers/migrations/: 0001_initial.py  0002_alter_driverinfo_middle_name.py
orders/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
orders/migrations/: 0001_initial.py  0002_alter_ordercompany_options_and_more.py  0002_alter_ordercompany_weight.py  0003_alter_ordercompany_cac_no.py  0003_alter_ordercompany_weight.py  0004_alter_ordercompany_middle_name_and_more.py
templates/authentications/: login.html  register.html  updateuser.html
templates/base/: base.html  cnavbar.html  index.html  navbar.html
templates/delete/: ctrip.html  ctriperror.html  deletecorder.html  deleteiorder.html  deletetruck.html  deleteuser.html  driverdelete.html  drivererror.html  itrip.html  itriperror.html
templates/display/: Companyorder.html  Individualorder.html  ctrip.html  driver.html  driverdetails.html  itrip.html  iviewordertrips.html  userdetails.html  (+2 more)
trips/: admin.py  forms.py  models.py  urls.py  views.py
trucks/: admin.py  apps.py  forms.py  models.py  signals.py  tests.py  urls.py  views.py
(+21 files in other folders)
